--- a/carracing/journey/templates/journey/journey_success.html
+++ b/carracing/journey/templates/journey/journey_success.html
@@ -1,7 +1,5 @@
 {% extends "./base.html" %}
 
 {% block content %}
-    {% for car in cars %}
-        <div>{{ car }}</div>
-    {% endfor %}
+    <div>Travel time: {{ time_in_trip }} seconds</div>
 {% endblock content %}
