--- a/carracing/journey/templates/journey/passengers_stats.html
+++ b/carracing/journey/templates/journey/passengers_stats.html
@@ -1,5 +1,7 @@
 {% extends "./base.html" %}
 
 {% block content %}
-passengers
+    {% for passenger in passengers %}
+        <div>{{ passenger.user_name }}</div>
+    {% endfor %}
 {% endblock content %}
