--- a/carracing/journey/templates/journey/journey_form.html
+++ b/carracing/journey/templates/journey/journey_form.html
@@ -1,5 +1,16 @@
 {% extends "./base.html" %}
 
 {% block content %}
-journey
+<form class="form-class" action="" method="post">
+    {% csrf_token %}
+    {{ form.non_field_errors }}
+    <div>
+        <span>{{ form.car.label }}: </span>{{ form.car }}
+    </div>
+    <div>
+        <span>{{ form.distance.label }}: </span>{{ form.distance }}
+    </div>
+    {{ form.errors }}
+    <button type="submit" class="submit-button">Go!</button>
+</form>
 {% endblock content %}
