--- a/carracing/journey/templates/journey/base.html
+++ b/carracing/journey/templates/journey/base.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>CarRace</title>
+    <style>
+        table {
+          border-collapse: collapse;
+        }
+        table, th, td {
+          border: 1px solid;
+        }
+    </style>
 </head>
 <body>
     <nav>
