--- a/carracing/journey/templates/journey/journey_success.html
+++ b/carracing/journey/templates/journey/journey_success.html
@@ -1,5 +1,5 @@
 {% extends "./base.html" %}
 
 {% block content %}
-    <div>Travel time: {{ time_in_trip }} seconds</div>
+    <div>Travel time: {{ travel_time }} hours</div>
 {% endblock content %}
