--- a/carracing/journey/templates/journey/passengers_stats.html
+++ b/carracing/journey/templates/journey/passengers_stats.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     {% for passenger in passengers %}
-        <div>{{ passenger.user_name }}</div>
+        <div>{{ passenger }}</div>
     {% endfor %}
 {% endblock content %}
